# shogle_mpv

./: .gitignore  .gitmodules  .project.toml  CMakeLists.txt
.cache/clangd/index/: main.cpp.AD235D0F164DFD4A.idx
src/: main.cpp
